--- a/web/weather-check-ui/index.html
+++ b/web/weather-check-ui/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Save your preferences</title>
+    <title>Weather Forecast Information</title>
   </head>
   <body>
     <div id="app"></div>
